2001-06-22  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (article-display-x-face): Don't gather X-Face
	fields in `gnus-original-article-buffer'.

2001-06-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-find-parameter): Undo the last
	bogus changes; use the value of `nnshimbun-pre-fetch-article' if
	the value of the group parameter `prefetch-articles' is nil; do
	likewise for `encapsulate-images'.

2001-06-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-find-parameter): Use the value of
	`nnshimbun-pre-fetch-article' if the value of the group parameter
	`prefetch-articles' is `off'; do likewise for `encapsulate-images'.

2001-06-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-encapsulate-images): Fix a
	doc-string that both the values `off' and nil specifies not to
	encapsulate images.
	(nnshimbun-encapsulate-images): Fix a doc-string that both the
	values `off' and nil specifies not to encapsulate images.
	(nnshimbun-pre-fetch-article): Default to `off'.

2001-06-18  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-encapsulate-images): Renamed from
	`nnshimbun-encapsulate-article'.
	(nnshimbun-request-article-1): Replace `encapsulate-article' with
	`encapsulate-images'.
	(nnshimbun-find-parameter): Ditto.
	(nnshimbun-group-parameters): Ditto.
	(nnshimbun-group-parameters-custom): Ditto.

2001-06-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el (nnshimbun-group-parameters-custom): Add
	`encapsulate-article' as a customizable option, and modified
	`prefetch-articles'.
	(nnshimbun-group-parameters): Add document for
	`encapsulate-article'.
	(nnshimbun-encapsulate-article): New server variable.
	(nnshimbun-find-parameter): Add code for `encapsulate-article'.
	(nnshimbun-request-article-1): Refer `encapsulate-article' group
	parameter to control `shimbun-encapsulate-article' value when
	`shimbun-article' is called.
